--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "port": 3000,
   "urls": {
     "heroPrefix": "https://hahow-recruit.herokuapp.com/heroes",
     "auth": "https://hahow-recruit.herokuapp.com/auth"
@@ -6,18 +7,19 @@
   "errors": {
     "httpError": {
       "msg": "Unknown server error",
-      "statusCode": 500
+      "status": 500
     },
     "invalidParam": {
       "msg": "Invalid parameter(s)",
-      "statusCode": 400
+      "status": 400
     },
     "invalidAuth": {
       "msg": "Invalid credentials",
-      "statusCode": 401
-    }, "notFound": {
+      "status": 401
+    },
+    "notFound": {
       "msg": "Resourse not found",
-      "statusCode": 404
+      "status": 404
     }
   }
 }
