--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/wdrbdev/hahow#readme",
   "dependencies": {
-    "axios": "^1.6.6"
+    "axios": "^1.6.6",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.7.0"
