--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "jest"
+    "test": "jest --runInBand --silent=false"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "axios-mock-adapter": "^1.22.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
