chore: remove jest debug flag

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "jest --runInBand --silent=false"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
